@@ -1,3 +1,6 @@
+
+    CONFIGURE_REQUIRES ExtUtils::MakeMaker 6.70
+
 1.29 2014-08-14
     Official co-maintainer SZABGAB (Gabor Szabo)
     Update documentation according to RT #60722
